--- a/PaginaServicios.html
+++ b/PaginaServicios.html
@@ -202,7 +202,7 @@
         </section>
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2023 Copyright:
-            <a class="text-reset fw-bold" href="index.html.html">expressrepairs.com</a>
+            <a class="text-reset fw-bold" href="index.html">expressrepairs.com</a>
             <div class="credits">
                 Diseñado por
                 <a href="https://www.linkedin.com/in/andr%C3%A9s-santiago-hern%C3%A1ndez-moncada/" target="_blank"
